Added an initial ContentFilter for .sass and .scss files.

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -53,5 +53,6 @@
     <add type="Assman.dotLess.dotLessAssmanPlugin, Assman.dotLess, Version=1.0.0.0, Culture=neutral" />
     <add type="Assman.YuiCompressor.YuiJavascriptCompressorPlugin, Assman.YuiCompressor, Version=1.0.0.0, Culture=neutral" />
     <add type="Assman.YuiCompressor.YuiCssCompressorPlugin, Assman.YuiCompressor, Version=1.0.0.0, Culture=neutral" />
+    <add type="Assman.SassAndCoffee.SassAssmanPlugin, Assman.SassAndCoffee, Version=1.0.0.0, Culture=neutral" />
   </plugins>
 </assman>
