--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\samples\Mvc-WebAppProject\Website\packages.config" />
   <repository path="..\src\Assman.Spark\packages.config" />
   <repository path="..\src\Assman.YuiCompressor\packages.config" />
+  <repository path="..\src\Assman.Sass\packages.config" />
 </repositories>
