Updated the SassContentFilter to use the ProcessContent method instead of ProcessFileContent.  ProcessContent is not actually supported, but I am going to submit a pull request. For now, the checked in version of SassAndCoffee.Core is not a released version.

--- a/src/Assman.SassAndCoffee/Assman.SassAndCoffee.csproj
+++ b/src/Assman.SassAndCoffee/Assman.SassAndCoffee.csproj
@@ -80,7 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssmanSassAndCoffeeHost.cs" />
     <Compile Include="SassAssmanPlugin.cs" />
-    <Compile Include="SassAndCoffeeFilter.cs" />
+    <Compile Include="SassContentFilter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assman.SassAndCoffee.nuspec" />
