Added a CoffeeScript plugin.

--- a/samples/Mvc-WebAppProject/Website/Web.config
+++ b/samples/Mvc-WebAppProject/Website/Web.config
@@ -83,6 +83,9 @@
       <add verb="GET,HEAD" path="*.js" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
       <add verb="GET,HEAD" path="*.css" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
       <add verb="GET,HEAD" path="*.less" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add verb="GET,HEAD" path="*.scss" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add verb="GET,HEAD" path="*.sass" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add verb="GET,HEAD" path="*.coffee" validate="false" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
     </httpHandlers>
   </system.web>
   <system.web.extensions/>
@@ -97,7 +100,10 @@
       <remove name="UrlRoutingHandler"/>
       <add name="ConsolidatedJavascriptHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.js" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
       <add name="ConsolidatedCssHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.css" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
-      <add name="ConsolidatedCssHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.less" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add name="ConsolidatedLessHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.less" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add name="ConsolidatedScssHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.scss" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add name="ConsolidatedSassHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.sass" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
+      <add name="ConsolidatedCoffeeHandler" preCondition="integratedMode" verb="GET,HEAD" path="*.coffee" type="Assman.Handlers.ResourceHttpHandlerFactory, Assman, Version=1.0.0.0, Culture=neutral"/>
     </handlers>
   </system.webServer>
   <runtime>
