--- a/src/Assman.SassAndCoffee/Assman.SassAndCoffee.csproj
+++ b/src/Assman.SassAndCoffee/Assman.SassAndCoffee.csproj
@@ -77,6 +77,9 @@
     <Compile Include="..\..\lib\BuildTools\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="CoffeeMinifyingFilter.cs" />
+    <Compile Include="CoffeeScriptAssmanPlugin.cs" />
+    <Compile Include="CoffeeScriptContentFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssmanSassAndCoffeeHost.cs" />
     <Compile Include="SassAssmanPlugin.cs" />
