Fixed a bug where resources registerd via a RenderAction call would not register themselves in the parent view.

--- a/samples/Mvc-WebAppProject/Website/Website.csproj
+++ b/samples/Mvc-WebAppProject/Website/Website.csproj
@@ -131,6 +131,8 @@
     <Content Include="Scripts\MicrosoftMvcValidation.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\Web.config" />
+    <None Include="Views\IntegrationTests\ViaRenderAction.spark" />
+    <None Include="Views\IntegrationTests\ViaRenderPartial.spark" />
     <None Include="Views\Layouts\Application.spark" />
   </ItemGroup>
   <ItemGroup>
