updated the .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
 _ReSharper.Assman/*
-bin/Debug/*
-bin/Release/*
+[Bb]in
+obj
 *.user
 *.suo
 *.cache
 *.docstates
 *.nupkg
-NuGet/lib/*
-samples/LessIntegration/bin/*
-Website/Bin/*
 output/*
-
+src/Assman.Mvc/NuGet/lib/
+src/Assman.Spark/NuGet/lib/
+src/Assman.WebForms/NuGet/lib/
+src/Assman.YuiCompressor/NuGet/lib/
+src/Assman.dotLess/NuGet/lib/
+src/Assman/NuGet/lib/
