Updated the .gitignore in light of the SassAndCoffee project

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ src/Assman.Spark/NuGet/lib/
 src/Assman.WebForms/NuGet/lib/
 src/Assman.YuiCompressor/NuGet/lib/
 src/Assman.dotLess/NuGet/lib/
+src/Assman.SassAndCoffee/NuGet/lib/
 src/Assman/NuGet/lib/
