--- a/src/Assman/Assman.csproj
+++ b/src/Assman/Assman.csproj
@@ -88,6 +88,7 @@
     <Compile Include="BuildSupport\ILogger.cs" />
     <Compile Include="BuildSupport\MSBuild\PreCompileResources.cs" />
     <Compile Include="BuildSupport\NullLogger.cs" />
+    <Compile Include="CachingResourceFinder.cs" />
     <Compile Include="Comparers.cs" />
     <Compile Include="ResourceModeCondition.cs" />
     <Compile Include="ConsolidatedResourceExcluder.cs" />
@@ -193,6 +194,7 @@
     <Compile Include="ResourceGroup.cs" />
     <Compile Include="Handlers\ResourceHttpHandlerFactory.cs" />
     <Compile Include="ResourceMode.cs" />
+    <Compile Include="ResourceModeFilteringFinder.cs" />
     <Compile Include="StringExtensions.cs" />
     <Compile Include="ThreadSafeInMemoryCache.cs" />
     <Compile Include="EmbeddedResource.cs" />
