Refactored the Resource Inclusion Mechanism to be more performant.  The APIs now fully support resources being consolidated into multiple groups.

--- a/samples/Mvc-WebAppProject/Website/Website.csproj
+++ b/samples/Mvc-WebAppProject/Website/Website.csproj
@@ -97,7 +97,9 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <None Include="Content\Unconsolidated\TestHelper.less" />
-    <None Include="Views\Home\Index.spark" />
+    <None Include="Views\Home\Index.spark">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Views\IntegrationTests\Index.spark">
       <SubType>Designer</SubType>
     </None>
