--- a/src/Assman.Mvc/Assman.Mvc2.nuspec
+++ b/src/Assman.Mvc/Assman.Mvc2.nuspec
@@ -11,7 +11,7 @@
     <description>A full featured web resource/asset management framework for ASP.NET Mvc. This edition of the package is targeted at Mvc 2.0</description>
     <tags>javascript css mash consolidation mvc</tags>
     <dependencies>
-      <dependency id="Assman.Core" version="2.1.0-alpha3" />
+      <dependency id="Assman.Core" version="2.1.0" />
       <dependency id="NuGetPowerTools" version="0.26" />
     </dependencies>
   </metadata>
