--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\src\Assman.UnitTests\packages.config" />
-  <repository path="..\src\Assman.Less\packages.config" />
   <repository path="..\samples\Mvc-WebAppProject\Website\packages.config" />
+  <repository path="..\src\Assman.dotLess\packages.config" />
+  <repository path="..\src\Assman.Less\packages.config" />
   <repository path="..\src\Assman.Spark\packages.config" />
+  <repository path="..\src\Assman.UnitTests\packages.config" />
   <repository path="..\src\Assman.YuiCompressor\packages.config" />
 </repositories>
