--- a/src/Assman.YuiCompressor/Assman.YuiCompressor.nuspec
+++ b/src/Assman.YuiCompressor/Assman.YuiCompressor.nuspec
@@ -10,6 +10,9 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Integrates the YUI Css and Javascript Compressor with Assman.  This tells Assman to use the YUI libraries to minify both javascript and css</description>
     <tags>javascript css mash minify consolidation yui yuicompressor</tags>
+    <releaseNotes>
+      Added better error reporting for when you try to minify an empty file.
+    </releaseNotes>
     <dependencies>
       <dependency id="Assman.Core" version="2.0" />
       <dependency id="YUICompressor.NET" version="1.5.0.0" />
