added possibility to override culture used on js compression

--- a/samples/Mvc-WebAppProject/Website/Assman.config
+++ b/samples/Mvc-WebAppProject/Website/Assman.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0"?>
 <assman>
   <scripts>
+    <jsCompressionOverride culture="en-GB" />
     <groups>
       <group consolidatedUrl="~/Scripts/Consolidated/Shared/JQuery.js">
         <include>
