--- a/src/Assman.YuiCompressor/Assman.YuiCompressor.csproj
+++ b/src/Assman.YuiCompressor/Assman.YuiCompressor.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\..\packages\YUICompressor.NET.1.5.0.0\lib\NET35\EcmaScript.NET.modified.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
